; ModuleID = '/home/carl/AnghaBench/git/extr_patch-ids.c_has_commit_patch_id.c'
source_filename = "/home/carl/AnghaBench/git/extr_patch-ids.c_has_commit_patch_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.patch_id = type { i32 }
%struct.commit = type { i32 }
%struct.patch_ids = type { i32 }

@ent = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.patch_id* @has_commit_patch_id(%struct.commit* %0, %struct.patch_ids* %1) #0 {
  %3 = alloca %struct.patch_id*, align 8
  %4 = alloca %struct.commit*, align 8
  %5 = alloca %struct.patch_ids*, align 8
  %6 = alloca %struct.patch_id, align 4
  store %struct.commit* %0, %struct.commit** %4, align 8
  store %struct.patch_ids* %1, %struct.patch_ids** %5, align 8
  %7 = load %struct.commit*, %struct.commit** %4, align 8
  %8 = call i32 @patch_id_defined(%struct.commit* %7)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %2
  store %struct.patch_id* null, %struct.patch_id** %3, align 8
  br label %23

11:                                               ; preds = %2
  %12 = call i32 @memset(%struct.patch_id* %6, i32 0, i32 4)
  %13 = load %struct.commit*, %struct.commit** %4, align 8
  %14 = load %struct.patch_ids*, %struct.patch_ids** %5, align 8
  %15 = call i64 @init_patch_id_entry(%struct.patch_id* %6, %struct.commit* %13, %struct.patch_ids* %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %11
  store %struct.patch_id* null, %struct.patch_id** %3, align 8
  br label %23

18:                                               ; preds = %11
  %19 = load %struct.patch_ids*, %struct.patch_ids** %5, align 8
  %20 = getelementptr inbounds %struct.patch_ids, %struct.patch_ids* %19, i32 0, i32 0
  %21 = load i32, i32* @ent, align 4
  %22 = call %struct.patch_id* @hashmap_get_entry(i32* %20, %struct.patch_id* %6, i32 %21, i32* null)
  store %struct.patch_id* %22, %struct.patch_id** %3, align 8
  br label %23

23:                                               ; preds = %18, %17, %10
  %24 = load %struct.patch_id*, %struct.patch_id** %3, align 8
  ret %struct.patch_id* %24
}

declare dso_local i32 @patch_id_defined(%struct.commit*) #1

declare dso_local i32 @memset(%struct.patch_id*, i32, i32) #1

declare dso_local i64 @init_patch_id_entry(%struct.patch_id*, %struct.commit*, %struct.patch_ids*) #1

declare dso_local %struct.patch_id* @hashmap_get_entry(i32*, %struct.patch_id*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
